--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -254,13 +254,13 @@
                 de las preguntas más frecuentes.</p>
             <p class="text-center"><span class="chachi">¿Tiene una pregunta específica?</span> Rellene nuestro formulario de <a class="chachi" href="#contacto">contacto</a></p>
             <div class="panel-group">
-                <div class="panel panel-default row">
-                    <div class="panel-heading col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" href="#collapse1">¿Porque debería confiar en Chacha Chachi?</a>
                         </h4>
                     </div>
-                    <div id="collapse1" class="panel-collapse collapse col-md-6">
+                    <div id="collapse1" class="panel-collapse collapse">
                         <h4>
                             Estamos orgullosos de ofrecer servicios de limpieza profesional y empleamos a amas de llaves residenciales que se enorgullecen de ofrecer servicios de alta calidad. Después de someterse a una exhaustiva verificación de antecedentes, cada miembro de nuestro
                             equipo está completamente capacitado en cada paso de nuestros planes de limpieza detallados. También respaldamos todo nuestro trabajo con una garantía de 24 horas. Estas son solo algunas de las muchas razones por las que los
@@ -268,13 +268,13 @@
                         <div class="panel-footer"></div>
                     </div>
                 </div>
-                <div class="panel panel-default row">
-                    <div class="panel-heading col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" href="#collapse2">¿A quién contrata Chacha Chachi para limpiar mi casa?</a>
                         </h4>
                     </div>
-                    <div id="collapse2" class="panel-collapse collapse col-md-6">
+                    <div id="collapse2" class="panel-collapse collapse">
                         <h4>Puede estar seguro de que todos nuestros profesionales de limpieza están totalmente capacitados y asegurados. Respetamos a todos nuestros clientes al nunca fumar, beber, comer o usar electrodomésticos durante las limpiezas de la
                             casa. Usamos nuestros uniformes reconocidos nacionalmente con orgullo y con confianza llevamos a cabo servicios que superan las expectativas. También nos entrenamos regularmente para asegurarnos de estar siempre al día con
                             las últimas y mejores técnicas de limpieza. Para mayor seguridad y tranquilidad, el trabajo que realizamos para cada cliente es responsabilizado por un supervisor confiable y experimentado.</h4>
