Creada clase usuario y la tabla que muestra clientes y empleados

--- a/ProyectoNetbeans/assets/components/home/test2.html
+++ b/ProyectoNetbeans/assets/components/home/test2.html
@@ -1,11 +1,26 @@
-<div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
-    <ul class='nav navbar-nav navbar-right'>
-        <li><a>". strtoupper($tipoGestion) ."</a></li>
-        <li><a href='#'>Page</a></li>
-        <li><a href='#'>Page</a></li>
-        <li><a href='#'>Page</a></li>
-        <li><a href='#'>Page</a></li>
-    </ul>
-</div>
-</div>
-</nav>
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Nombre</th>
+            <th>Apellidos</th>
+            <th>Telefono</th>
+            <th>Correo</th>
+            <th>Fecha de nacimiento</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <div class="radio">
+                    <label><input type="radio" name="optradio" checked>Option 1</label>
+                </div>
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
