--- a/ProyectoNetbeans/assets/components/home/test2.html
+++ b/ProyectoNetbeans/assets/components/home/test2.html
@@ -1,26 +1,30 @@
-<table>
-    <thead>
-        <tr>
-            <th></th>
-            <th>Nombre</th>
-            <th>Apellidos</th>
-            <th>Telefono</th>
-            <th>Correo</th>
-            <th>Fecha de nacimiento</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                <div class="radio">
-                    <label><input type="radio" name="optradio" checked>Option 1</label>
-                </div>
-            </td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </tbody>
-</table>
+<div id='tablaVista' class='container-fluid'>
+    <form method="POST" action="<?php echo $_SERVER['PHP_SELF'];?>">
+        <table class='row table-bordered table-hover table-responsive'>
+            <thead>
+                <tr>
+                    <th>&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    <th class='text-center'>Nombre</th>
+                    <th class='text-center'>Apellidos</th>
+                    <th class='text-center'>Telefono</th>
+                    <th class='text-center'>Correo</th>
+                    <th class='text-center'>Fecha de nacimiento</th>
+                </tr>
+            </thead>
+            <tbody>"; $model = new modelClass(); $empleados = $model->verEmpleados(); foreach ($empleados as $value) { $tablaHTML.= "
+                <tr>
+                    <td>
+                        <input class='radio' type='radio' name='btnradio' value='". $value->getP_Usuario()."' checked>
+                    </td>
+                    <td class='text-center'>" . $value->getNombre() . "</td>
+                    <td class='text-center'>" . $value->getApellidos() . "</td>
+                    <td class='text-center'>" . $value->getTelefono() . "</td>
+                    <td class='text-center'>" . $value->getCorreo() . "</td>
+                    <td class='text-center'>" . $value->getFechaNacimiento() . "</td>
+                </tr>"; } $tablaHTML.= "</tbody>
+        </table>
+        <div class='col-md-offset-10 col-md-3'>
+            <button id='modificarEmpleado' name='modificarEmpleado' type='submit' class='btn estilo-btn'>Modificar</button>
+        </div>
+    </form>
+</div>
