Creada la clase casa.php, y el controlador para casas, los nombres de las vistas cambiados a view.php y terminada la funcionalidada de mostrar, modificar y añadir en empleados, clientes y casas

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -103,7 +103,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a id="login" href="./../login/login.php">
+                        <a id="login" href="./../login/view.php">
                             <img src="./../../images/icono/login/login64.png">
                         </a>
                     </li>
