Clase carrito.php creada, añadidos los selects necesarios para poder elegir tareas, clientes y empleados

--- a/ProyectoNetbeans/assets/components/home/test.html
+++ b/ProyectoNetbeans/assets/components/home/test.html
@@ -1,44 +1,2 @@
-<form method='POST' action='?gestion=tareas' class='contenido-home'>
-    <div class='col-md-6'>
-        <div class='form-group row'>
-            <label class='col-4 col-form-label' for='progTarea'>Tareas</label>
-            <div class='col-8'>
-                <select id='progTarea' name='progTarea' class='custom-select' required='required'>
-                        <option value='rabbit'>Rabbit</option>
-                        <option value='duck'>Duck</option>
-                        <option value='fish'>Fish</option>
-                      </select>
-            </div>
-        </div>
-        <div class='form-group row'>
-            <label for='fecha' class='control-label col-md-4'>Duración (h)</label>
-            <div class='col-md-8'>
-                <input id='fecha' name='progfecha' type='date' required='required' class='form-control'>
-            </div>
-        </div>
-        <div class='form-group row'>
-            <label class='col-4 col-form-label' for='progCliente'>Cliente</label>
-            <div class='col-8'>
-                <select id='progCliente' name='progCliente' class='custom-select' required='required'>
-                            <option value='rabbit'>Rabbit</option>
-                            <option value='duck'>Duck</option>
-                            <option value='fish'>Fish</option>
-                          </select>
-            </div>
-        </div>
-    </div>
-    <div class='col-md-6'>
-        <div class='form-group row'>
-            <label for='duracion' class='control-label col-md-4'>Duración (h)</label>
-            <div class='col-md-8'>
-                <input id='duracion' name='modifyDuracion' type='number' value='' . $tarea->getDuracion_h() .'' required='required' class='form-control'>
-            </div>
-        </div>
-        <div class='form-group row'>
-            <label for='precio' class='control-label col-md-4'>Precio (€)</label>
-            <div class='col-md-8'>
-                <input id='precio' name='modifyPrecio' placeholder='10 €' type='text' value='' . $tarea->getPrecio() .' €' class='form-control'>
-            </div>
-        </div>
-    </div>
-</form>
+if (isset($_POST["iniciar"])) { $usuario = $_POST['user']; $password = $_POST['password']; if (!comprobar($conexion, $usuario, $password)) { header("Location: http://localhost/repo/ONG/login.php"); } else { $_SESSION['logueado'] = "Si"; $_SESSION['usuario']
+= $usuario; } } elseif ($_SESSION['logueado'] == "Si") { } else { header("Location: http://localhost/repo/ONG/login.php"); }
