Añadido el botón Borrar en el apartado "ver" de casas, empleados, clientes y tareas

--- a/ProyectoNetbeans/assets/css/home.css
+++ b/ProyectoNetbeans/assets/css/home.css
@@ -257,7 +257,8 @@ ul.CTAs a {
     border: 1px solid #f16e94;
 }
 
-#modificarEmpleado {
+#modificarEmpleado,
+#borrarEmpleado {
     margin-top: 5%;
 }
 
