--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -46,12 +46,12 @@
             <i class="fa fa-envelope"></i> email@dominio.com
 
             <!-- sociales -->
-            <ul class="list-unstyled" id="iconos-social">
-                <li>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
+            <ul class="list-unstyled iconos-social">
                 <li>
                     <a href="#"><i class="fa fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -64,7 +64,6 @@
                     <a href="#"><i class="fa fa-github"></i></a>
                 </li>
             </ul>
-
         </div>
     </div>
     <!-- Barra Menu -->
@@ -97,7 +96,6 @@
                             <li><a href="#servicios">Limpieza en mudanzas</a></li>
                         </ul>
                     </li>
-                    <!-- <li><a href="#galeria">Galería</a></li> -->
                     <li><a href="#seccontact">Contacto</a></li>
                     <li><a href="#faq">FAQS</a></li>
                 </ul>
@@ -114,7 +112,7 @@
     </nav>
 
     <!-- Slider -->
-    <div class="container-fluid no-padding no-margin">
+    <div id="slider" class="container-fluid no-padding no-margin">
         <div id="myCarousel" class="carousel slide no-margin no-padding" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -177,25 +175,24 @@
 
     <!-- SECCION servicios -->
     <section id="servicios" class="container-fluid no-margin no-padding">
-        <!-- <h1 class="text-center">AÑADIR CONTENIDO AQUÍ</h1> -->
-        <div class="row">
-            <div id="casa" class="col-md-6 no-margin no-padding">
-                <img src="./../../images/servicios/sala.jpg" class="col-md-12 no-margin no-padding">
-                <div class="overlay1 no-margin no-padding">
-                    <div class="text1">
-                        <h3>Limpieza de casas</h3>
-                    </div>
-                </div>
-            </div>
-            <div id="mudanza" class="col-md-6 no-margin no-padding">
-                <img src="./../../images/servicios/openHouse.jpg" class="col-md-12 no-margin no-padding">
-                <div class="overlay2 no-margin no-padding">
-                    <div class="text2">
-                        <h3>Limpieza en mudanzas</h3>
-                    </div>
+        <!-- <div class="row"> -->
+        <div id="casa" class="col-md-6 no-margin no-padding">
+            <img src="./../../images/servicios/sala.jpg" class="no-margin no-padding img-responsive">
+            <div class="overlay1 no-margin no-padding">
+                <div class="text1">
+                    <h3>Limpieza de casas</h3>
                 </div>
             </div>
         </div>
+        <div id="mudanza" class="col-md-6 no-margin no-padding">
+            <img src="./../../images/servicios/openHouse.jpg" class="no-margin no-padding img-responsive">
+            <div class="overlay2 no-margin no-padding">
+                <div class="text2">
+                    <h3>Limpieza en mudanzas</h3>
+                </div>
+            </div>
+        </div>
+        <!-- </div> -->
 
     </section>
     <!-- SECCION servicios -->
@@ -288,32 +285,36 @@
 
     <!-- SECCION PIE -->
     <footer id="footer" class="container-fluid">
-        <div class="container">
-            <div class="row">
+        <div class="row">
 
-                <!-- copyright -->
-                <div class="copyright col-md-3">
-                    <p>&copy;Inés Carazo Núñez 2019</p>
-                </div>
+            <!-- copyright -->
+            <div class="copyright col-md-3">
+                <p>&copy;Inés Carazo Núñez 2019</p>
+            </div>
 
-                <div class="col-md-3">
-                    <a href="export.html">Política de privacidad</a>
-                </div>
-                <!-- sociales -->
-                <div class="col-md-4">
-                    <ul id="iconos-social">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    </ul>
-                </div>
+            <div class="col-md-3">
+                <a href="./export.html">Política de privacidad</a>
+            </div>
+            <!-- sociales -->
+            <div class="col-md-offset-2 col-md-2">
+                <ul class="list-unstyled iconos-social">
+                    <li>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                    </li>
+
+                    <li>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-github"></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
