--- a/ProyectoNetbeans/assets/css/blog_home.css
+++ b/ProyectoNetbeans/assets/css/blog_home.css
@@ -75,26 +75,32 @@
         /*Menú*/
         /* Iconos social*/
         
-        #iconos-social {
+        .iconos-social {
             float: right;
             margin: 0;
         }
         
-        #iconos-social li {
+        .iconos-social li {
             float: left;
             list-style: none;
         }
         
-        #iconos-social li a {
+        .iconos-social li a {
             font-size: 1.5em;
             margin-left: 0.2em;
             color: white;
         }
         
-        #iconos-social li a:hover {
+        .iconos-social li a:hover {
             color: grey;
         }
         /* Iconos social*/
+        /* Slider */
+        
+        #slider {
+            padding-bottom: 5%;
+        }
+        /* Slider */
         
         .cabecera-seccion h2,
         .cabecera-seccion p {
@@ -103,7 +109,7 @@
         /*CONTACTO*/
         
         #seccontact {
-            padding-top: 13%;
+            padding-top: 11%;
             padding-bottom: 15%;
         }
         
@@ -161,7 +167,7 @@
         /* FAQS */
         
         #faq {
-            padding-top: 14%;
+            padding-top: 12%;
             padding-bottom: 15%;
         }
         
@@ -213,13 +219,13 @@
         /* SERVICIOS */
         
         #servicios {
-            padding-top: 15%;
-            padding-bottom: 15%;
+            padding-top: 12%;
+            padding-bottom: 10%;
         }
         
         #servicios img {
-            height: 500px;
-            width: auto;
+            width: 680px;
+            height: 446px;
         }
         
         .overlay1,
@@ -229,8 +235,8 @@
             bottom: 0;
             left: 0;
             right: 0;
-            height: 100%;
-            width: 100%;
+            height: auto;
+            width: 680px;
             opacity: 0;
             transition: .5s ease;
             background-color: #f16e94;
@@ -251,7 +257,7 @@
             transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
         }
-        /* RESERVICIOSLLENO */
+        /* SERVICIOS */
         /* SOBRE NOSOTROS */
         
         #sobrenosotros {
