--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -249,7 +249,7 @@
             <h4 class="text-center">Respuestas a nuestras preguntas más comunes</h4>
             <p>Chacha Chachi está comprometida con la completa satisfacción de sus clientes, razón por la cual nos esforzamos por ofrecer los servicios de limpieza de su hogar más confiables y asequibles. Nuestro equipo de profesionales ha respondido algunas
                 de las preguntas más frecuentes.</p>
-            <p class="text-center"><span class="chachi">¿Tiene una pregunta específica?</span> Rellene nuestro formulario de <a class="chachi" href="#contacto">contacto</a></p>
+            <p class="text-center"><span class="chachi">¿Tiene una pregunta específica?</span> Rellene nuestro formulario de <a class="chachi" href="#seccontact">contacto</a></p>
             <div class="panel-group">
                 <div class="panel panel-default">
                     <div class="panel-heading">
