--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -19,7 +19,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" defer></script>
-
+    <script src="./controller.js"></script>
     <style>
         /* Note: Try to remove the following lines to see the effect of CSS positioning */
         
@@ -34,6 +34,14 @@
             padding-top: 70px;
         }
     </style>
+    <!-- Mail -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("user_LWAg91CjwoMDU7dVZq5Qx");
+        })();
+    </script>
+<!-- Mail -->
 </head>
 
 
@@ -198,33 +206,31 @@
     <!-- SECCION servicios -->
 
     <!--SECCION contacto -->
-    <section id="seccontact" class="container">
-        <div id="contacto" class="row">
+    <section id="seccontact" class="container-fluid">
+        <div  class="row contacto no-margin no-padding">
             <div class="col-md-6">
                 <h3 class="text-center text-uppercase">Contacto</h3>
-
                 <div class="contenedor">
-                    <form action="#">
+                    <form>
                         <div class="row">
                             <label class="col-md-3">Nombre</label>
-                            <input type="text" id="name" class="col-md-9" name="firstname" placeholder="Escribe tu nombre">
+                            <input type="text" id="name" class="col-md-9" name="firstname" placeholder="Escribe tu nombre" required>
                         </div>
                         <div class="row">
                             <label class="col-md-3">Correo</label>
-                            <input type="email" id="mail" class="col-md-9" name="mail" placeholder="example@mail.com">
+                            <input type="email" id="mail" class="col-md-9" name="mail" placeholder="example@mail.com" required>
                         </div>
                         <div class="row">
-                            <label class="col-md-3">País</label>
-                            <select id="country" class="col-md-9" name="country">
-                            <option value="spain">España</option>
-                            <option value="australia">Australia</option>
-                            <option value="canada">Canada</option>
-                            <option value="usa">USA</option>
+                            <label class="col-md-3">Servicio</label>
+                            <select id="serviciolimpieza" class="col-md-9" name="serviciolimpieza"  required>
+                            <option value="" selected disabled hidden>Eliga un servicio de limpieza</option>
+                            <option value="Limpieza de Casa">Limpieza de Casa</option>
+                            <option value="Limpieza en mudanzas">Limpieza en mudanzas</option>
                         </select>
                         </div>
                         <div class="row">
                             <label class="col-md-3">Comentario</label>
-                            <textarea id="subject" class="col-md-9" name="subject" placeholder="Escribe aquí"></textarea>
+                            <textarea id="comentario" class="col-md-9" name="comentario" placeholder="Escribe aquí"  required></textarea>
                         </div>
                         <div class="row">
                             <input type="submit" value="Enviar">
