Funcionalidad del correo terminada y añadidos enlaces login y sign_in

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -16,7 +16,10 @@
     <link rel="stylesheet" href="./../../vendors/bootstrap/css/bootstrap.min.css" />
     <!-- CSS propio que usaremos para personalizar BS -->
     <link rel="stylesheet " href="./../../css/blog_home.css" />
-
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!--jQuery-->
+    <script src="./../../vendors/jquery/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" defer></script>
     <script src="./controller.js"></script>
@@ -37,11 +40,11 @@
     <!-- Mail -->
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
     <script type="text/javascript">
-        (function(){
+        (function() {
             emailjs.init("user_LWAg91CjwoMDU7dVZq5Qx");
         })();
     </script>
-<!-- Mail -->
+    <!-- Mail -->
 </head>
 
 
@@ -207,22 +210,23 @@
 
     <!--SECCION contacto -->
     <section id="seccontact" class="container-fluid">
-        <div  class="row contacto no-margin no-padding">
+        <div class="row contacto no-margin no-padding">
             <div class="col-md-6">
                 <h3 class="text-center text-uppercase">Contacto</h3>
                 <div class="contenedor">
-                    <form>
+                    <form id="contact-form">
+                        <input id="numhid" type="hidden" name="contact_number">
                         <div class="row">
                             <label class="col-md-3">Nombre</label>
-                            <input type="text" id="name" class="col-md-9" name="firstname" placeholder="Escribe tu nombre" required>
+                            <input type="text" id="name" class="col-md-9" name="user_name" placeholder="Escribe tu nombre" required>
                         </div>
                         <div class="row">
                             <label class="col-md-3">Correo</label>
-                            <input type="email" id="mail" class="col-md-9" name="mail" placeholder="example@mail.com" required>
+                            <input type="email" id="mail" class="col-md-9" name="user_email" placeholder="example@mail.com" required>
                         </div>
                         <div class="row">
                             <label class="col-md-3">Servicio</label>
-                            <select id="serviciolimpieza" class="col-md-9" name="serviciolimpieza"  required>
+                            <select id="serviciolimpieza" class="col-md-9" name="user_cleaning" required>
                             <option value="" selected disabled hidden>Eliga un servicio de limpieza</option>
                             <option value="Limpieza de Casa">Limpieza de Casa</option>
                             <option value="Limpieza en mudanzas">Limpieza en mudanzas</option>
@@ -230,10 +234,10 @@
                         </div>
                         <div class="row">
                             <label class="col-md-3">Comentario</label>
-                            <textarea id="comentario" class="col-md-9" name="comentario" placeholder="Escribe aquí"  required></textarea>
+                            <textarea id="comentario" class="col-md-9" name="contact" placeholder="Escribe aquí" required></textarea>
                         </div>
                         <div class="row">
-                            <input type="submit" value="Enviar">
+                            <input type="submit" id="enviar" value="Enviar">
                         </div>
 
                     </form>
