--- a/ProyectoNetbeans/assets/css/blog_home.css
+++ b/ProyectoNetbeans/assets/css/blog_home.css
@@ -9,7 +9,7 @@
         }
         
         .no-margin {
-            padding: 0%;
+            margin: 0%;
         }
         /* Barra Top */
         
@@ -207,11 +207,6 @@
             color: white;
         }
         
-        .buscar img {
-            width: 300px;
-            height: 200px;
-        }
-        
         .buscar h3 div {
             width: 505px;
         }
@@ -224,8 +219,8 @@
         }
         
         #servicios img {
-            width: 680px;
-            height: 446px;
+            width: 673px;
+            height: auto;
         }
         
         .overlay1,
@@ -236,7 +231,6 @@
             left: 0;
             right: 0;
             height: auto;
-            width: 680px;
             opacity: 0;
             transition: .5s ease;
             background-color: #f16e94;
