--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -206,7 +206,7 @@
     <!-- SECCION servicios -->
 
     <!--SECCION contacto -->
-    <section id="seccontact" class="container-fluid">
+    <section id="seccontact" class="container-fluid  no-padding no-margin">
         <div class="row contacto no-margin no-padding">
             <div class="col-md-6">
                 <h3 class="text-center text-uppercase">Contacto</h3>
