Menú del home completamente dimámico, y accesos en función del tipo de
usuario añadido

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -54,8 +54,8 @@
     <div class="container-fluid hidden-xs " id="top">
         <div class="container">
             <i class="fa fa-phone"></i> 942 12 34 56
-            <i class="fa fa-envelope"></i> email@dominio.com
-
+            <i class="fa fa-envelope"></i> chachachachi.limpieza@gmail.com
+            
             <!-- sociales -->
             <ul class="list-unstyled iconos-social">
                 <li>
