--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -54,8 +54,8 @@
     <div class="container-fluid hidden-xs " id="top">
         <div class="container">
             <i class="fa fa-phone"></i> 942 12 34 56
-            <i class="fa fa-envelope"></i> chachachachi.limpieza@gmail.com
-            
+            <i class="fa fa-envelope"></i> email@dominio.com
+
             <!-- sociales -->
             <ul class="list-unstyled iconos-social">
                 <li>
@@ -170,7 +170,7 @@
     </div>
 
     <!-- SECCION sobre nosotros -->
-    <section id="sobrenosotros" class="container-fluid no-margin no-padding">
+    <section id="sobrenosotros" class="container no-margin no-padding">
         <div class="row">
             <img src="./../../images/sobrenosotros/mitadsofa.jpg" class="col-md-6">
             <div id="sntexto" class="col-md-6">
@@ -186,27 +186,30 @@
 
     <!-- SECCION servicios -->
     <section id="servicios" class="container-fluid no-margin no-padding">
+        <!-- <div class="row"> -->
         <div id="casa" class="col-md-6 no-margin no-padding">
-            <img src="./../../images/servicios/sala.jpg">
+            <img src="./../../images/servicios/sala.jpg" class="no-margin no-padding img-responsive">
             <div class="overlay1 no-margin no-padding">
-                <div class="text1 no-margin no-padding">
+                <div class="text1">
                     <h3>Limpieza de casas</h3>
                 </div>
             </div>
         </div>
         <div id="mudanza" class="col-md-6 no-margin no-padding">
-            <img src="./../../images/servicios/openHouse.jpg">
+            <img src="./../../images/servicios/openHouse.jpg" class="no-margin no-padding img-responsive">
             <div class="overlay2 no-margin no-padding">
-                <div class="text2 no-margin no-padding">
+                <div class="text2">
                     <h3>Limpieza en mudanzas</h3>
                 </div>
             </div>
         </div>
+        <!-- </div> -->
+
     </section>
     <!-- SECCION servicios -->
 
     <!--SECCION contacto -->
-    <section id="seccontact" class="container-fluid  no-padding no-margin">
+    <section id="seccontact" class="container-fluid">
         <div class="row contacto no-margin no-padding">
             <div class="col-md-6">
                 <h3 class="text-center text-uppercase">Contacto</h3>
@@ -268,7 +271,7 @@
                         <h4>
                             Estamos orgullosos de ofrecer servicios de limpieza profesional y empleamos a amas de llaves residenciales que se enorgullecen de ofrecer servicios de alta calidad. Después de someterse a una exhaustiva verificación de antecedentes, cada miembro de nuestro
                             equipo está completamente capacitado en cada paso de nuestros planes de limpieza detallados. También respaldamos todo nuestro trabajo con una garantía de 24 horas. Estas son solo algunas de las muchas razones por las que los
-                            clientes confían en Chacha Chachi.</h4>
+                            clientes confían en Molly Maid.</h4>
                         <div class="panel-footer"></div>
                     </div>
                 </div>
