--- a/ProyectoNetbeans/assets/css/home.css
+++ b/ProyectoNetbeans/assets/css/home.css
@@ -13,9 +13,7 @@ p {
     color: #999;
 }
 
-a,
-a:hover,
-a:focus {
+a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
@@ -42,7 +40,6 @@ a:focus {
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
 }
-
 
 /* ---------------------------------------------------
   SIDEBAR STYLE
@@ -94,8 +91,7 @@ a:focus {
     background: #fff;
 }
 
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
+#sidebar ul li.active>a, a[aria-expanded="true"] {
     color: #fff;
     background: #f16e94;
 }
@@ -112,8 +108,7 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-a[aria-expanded="false"]::before,
-a[aria-expanded="true"]::before {
+a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
     content: '\e259';
     display: block;
     position: absolute;
@@ -144,7 +139,6 @@ ul.CTAs a {
     margin-bottom: 5px;
 }
 
-
 /* ---------------------------------------------------
   CONTENT STYLE
 ----------------------------------------------------- */
@@ -153,6 +147,7 @@ ul.CTAs a {
     padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
+    width: 100%;
 }
 
 #sidebarCollapse {
@@ -189,7 +184,6 @@ ul.CTAs a {
     margin: 5px auto;
 }
 
-
 /* ---------------------------------------------------
   MEDIAQUERIES
 ----------------------------------------------------- */
@@ -203,9 +197,7 @@ ul.CTAs a {
         margin-left: 0;
         transform: none;
     }
-    #sidebarCollapse span:first-of-type,
-    #sidebarCollapse span:nth-of-type(2),
-    #sidebarCollapse span:last-of-type {
+    #sidebarCollapse span:first-of-type, #sidebarCollapse span:nth-of-type(2), #sidebarCollapse span:last-of-type {
         transform: none;
         opacity: 1;
         margin: 5px auto;
@@ -225,24 +217,16 @@ ul.CTAs a {
 }
 
 @media(min-width: 769px) {
-    .contenido-home {
-        width: 1000px;
-    }
-    .contenido-tabla {
-        width: 905px;
-    }
     #tablaVista {
         padding-top: 3%;
         padding-left: 6%;
     }
-    #tablaVista th,
-    #tablaVista td {
+    #tablaVista th, #tablaVista td {
         padding: 2%;
     }
 }
 
-.estilo-btn:hover,
-.btn-default:hover {
+.estilo-btn:hover, .btn-default:hover {
     background-image: linear-gradient(to bottom right, #f16e94, #f3b3c5);
     color: white;
 }
@@ -260,9 +244,7 @@ ul.CTAs a {
     background-image: url();
 }
 
-#tablaVista table,
-#tablaVista th,
-#tablaVista td {
+#tablaVista table, #tablaVista th, #tablaVista td {
     border: 2px solid #f16e94;
 }
 
@@ -295,4 +277,10 @@ span#btnTextoSpan {
 
 .no-margin {
     margin: 0%;
+}
+
+.radio {
+    display: inline-block;
+    left: 50%;
+    transform: translateX(-50%);
 }
