--- a/ProyectoNetbeans/assets/css/home.css
+++ b/ProyectoNetbeans/assets/css/home.css
@@ -228,7 +228,7 @@ ul.CTAs a {
 @media(min-width: 769px) {
     #tablaVista {
         padding-top: 3%;
-        padding-left: 6%;
+        /*padding-left: 6%;*/
     }
     #tablaVista th,
     #tablaVista td {
@@ -259,10 +259,6 @@ ul.CTAs a {
 #tablaVista th,
 #tablaVista td {
     border: 2px solid #f16e94;
-}
-
-.modBorr {
-    margin-top: 5%;
 }
 
 .table-hover>tbody>tr:hover {
