--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -37,14 +37,7 @@
             padding-top: 70px;
         }
     </style>
-    <!-- Mail -->
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script type="text/javascript">
-        (function() {
-            emailjs.init("user_LWAg91CjwoMDU7dVZq5Qx");
-        })();
-    </script>
-    <!-- Mail -->
+
 </head>
 
 
@@ -98,17 +91,17 @@
             <!-- Menu -->
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#sobrenosotros">Sobre nosotros</a></li>
+                    <li id="home" class="active"><a href="#">Home</a></li>
+                    <li><a id="sobrenosotros" href="#sobrenosotros">Sobre nosotros</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Servicios <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#servicios">Limpieza de casa</a></li>
-                            <li><a href="#servicios">Limpieza en mudanzas</a></li>
+                            <li><a id="servicios" href="#servicios">Limpieza de casa</a></li>
+                            <li><a id="servicios" href="#servicios">Limpieza en mudanzas</a></li>
                         </ul>
                     </li>
-                    <li><a href="#seccontact">Contacto</a></li>
-                    <li><a href="#faq">FAQS</a></li>
+                    <li><a id="seccontact" href="#seccontact">Contacto</a></li>
+                    <li><a id="faq" href="#faq">FAQS</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
